--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,3 +39,13 @@ textarea:focus {
     border-color: #4da6ff !important;
     box-shadow: 0 0 8px #4da6ff88 !important;
 }
+
+.custom-dropdown {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.custom-dropdown li {
+    padding-left: 0;
+}
