--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -25,7 +25,7 @@
   {% block extra_css %}{% endblock %}
 </head>
 
-<body class="container py-4 dark-mode"> 
+<body class="container-fluid py-4 dark-mode"> 
   <!-- 🔹 Navbar -->
   <nav class="navbar navbar-expand-lg px-4 py-2 mb-4"
     style="background: linear-gradient(to right, #162c5c, #204a87, #2a73b3); box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);">
